--- a/dimusic/project.css
+++ b/dimusic/project.css
@@ -1,14 +1,15 @@
 @import 'https://fonts.googleapis.com/css?family=Alfa+Slab+One';
 body {
     /*filter: alpha(opacity=70, style=0); background-color: rgb(8, 10, 8);;*/
-    background: url(back.jpeg) repeat center center fixed; 
+/*    background: url(back.jpeg) repeat center center fixed;
     -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-   
+  */
+  background-color: #000000;
     font-family: 'Titillium Web', sans-serif;
-   
+
     font-family: 'Chewy', cursive;
     font-family: 'Alfa Slab One';
 
@@ -16,18 +17,13 @@ body {
 audio {
   filter: sepia(20%) saturate(70%) grayscale(0) contrast(70%) invert(12%);
   width: 200px;
-  height: 25px;
- 
+  height: 50px;
+
 }
 
 
-.column {
-    float: left;
-    width: 45%;
-    padding: 10px;
-  text-align: center;
-  }
-  
+
+
   /* Clear floats after the columns */
   .row:after {
     content: "";
@@ -39,29 +35,39 @@ audio {
     text-align: center;
   }
   .logos{
-      border:3px solid #ffffff;
-      border-radius: 50%;
+      border:0px solid #adff2f;
+      border-radius: 6%;
       padding: 3px;
+       width:40%;
+        height:40%;
 
   }
 
 #head {
     width: 100%;
-    height: 50px;
+  
     text-align: center;
    color: #ffffff;
 }
 .StationName {
-    
-  background: -webkit-linear-gradient( #08aa10, rgb(130, 123, 163));
+color:#adff2f;
+/*  background: -webkit-linear-gradient( #08aa10, rgb(130, 123, 163));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  filter: drop-shadow(2px 2px rgb(0, 0, 0));
+  filter: drop-shadow(2px 2px rgb(0, 0, 0));*/
+  border:3px solid #adff2f;
+  border-radius: 20%;
+  padding: 3px;
 }
 #bottom {
-    position: relative;
-    text-align: center;
-    color: #ffffff;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #adff2f;
+  color: black;
+  text-align: center;
+
 }
 #content {
   /*  background-color: #0f0e0e;*/
@@ -74,22 +80,24 @@ audio {
     clear: both;
 }
 hr {
-  border: 1px dotted #2fb108;
-  border-style: none none dotted; 
-  color: #fff; 
+  border: 1px dotted #adff2f;
+  border-style: none none dotted;
+  color: #fff;
   background-color: #fff;
+  width:400px;
 }
 h1 {
 
-  color:  #2fb108; 
+  color:  #adff2f;
   font-weight: lighter;
- 
+
 
   font-size: 28px;
-  background: -webkit-linear-gradient( #08aa10, rgb(130, 123, 163));
+/*  background: -webkit-linear-gradient( #08aa10, rgb(130, 123, 163));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   filter: drop-shadow(2px 2px rgb(0, 0, 0));
+  */
 }
 
 
